-----------------------------------------
* Now when you select an area (with mouse) you select all cell merged
* Now I reduce the numbre of refreshing of cell merged
* Now when you accross a merged cell it works
* fix others small fixes

Summary 2000-08-30 -> 2000-09-03
Montel laurent <montell@club-internet.fr>
-----------------------------------------
-Fix some bugs with cell merged when you used kspread_dlg_format
-Now "special paste" -> "without border" works again
-other some bugs

2000-09-05-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo for autofill

Summary 2000-09-05 -> 2000-09-16
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Implemented Undo for "Conditional cell Attribut"
* Implemented Undo for "Show Table" "Hide Table"
* Implemented Undo For "insert/remove cell"
* Undo layout works when you selected an entire row/column
* bugs fixes :
-close editor when you switch/insert/remove table
-others bugs (I don't remember )

2000-09-17-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo for "Paste"
* Bugs fixes

2000-09-18-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Improved Undo for "delete". Now works when you delete a column or row

2000-09-19-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Fixed changing page orientation
* Fixed default precision for percentages when autodetected

Summary 2000-09-19 -> 2000-09-23
*David : bug fix
non latin1 bug
Improved automatic check format (When number is >1E+10 format is changed in
scientific format)
Update DTD file

thanks

*Laurent:
some bugs fixes

Summary 2000-09-19 -> 2000-09-25
*Torben implemented removechild (Now you can remove a chart in
kspread for example)
Torben rewrote kspread_dlg_formula
thanks a lot

*laurent
some fixes